--- a/roles/system/tasks/ssh.yml
+++ b/roles/system/tasks/ssh.yml
@@ -1,39 +1,5 @@
-- name: Ensure SSH daemon is running.
-  service:
-    name: "sshd"
-    state: "started"
-
-- name: Supress shh login message
+- name: Ensure /bin/sh points to /bin/bash
   file:
-    path: "/home/{{ username }}/.hushlogin"
-    mode: 0644
-    owner: "{{ username }}"
-    group: "{{ username }}"
-    modification_time: preserve
-    access_time: preserve
-    state: touch
-
-- name: Update SSH configuration to be more secure.
-  lineinfile:
-    dest: "/etc/ssh/sshd_config"
-    regexp: "{{ item.regexp }}"
-    line: "{{ item.line }}"
-    state: present
-    validate: 'sshd -T -f %s'
-    mode: 0644
-  with_items:
-    - regexp: "^PermitRootLogin"
-      line: "PermitRootLogin no"
-    - regexp: "^Port"
-      line: "Port {{ ssh_port }}"
-    - regexp: "^UseDNS"
-      line: "UseDNS no"
-    - regexp: "^PermitEmptyPasswords"
-      line: "PermitEmptyPasswords no"
-    - regexp: "^ChallengeResponseAuthentication"
-      line: "ChallengeResponseAuthentication no"
-    - regexp: "^GSSAPIAuthentication"
-      line: "GSSAPIAuthentication no"
-    - regexp: "^X11Forwarding"
-      line: "X11Forwarding no"
-  notify: Restart SSH daemon
+    src: "/bin/bash"
+    dest: "/bin/sh"
+    state: link
