--- a/roles/system/tasks/main.yml
+++ b/roles/system/tasks/main.yml
@@ -1,3 +1,5 @@
 ---
 - ansible.builtin.include_tasks: packages.yml
 - ansible.builtin.include_tasks: ssh.yml
+- ansible.builtin.include_tasks: wifi.yml
+- ansible.builtin.include_tasks: firewall.yml
